--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,10 @@ vdr (1.4.5-1) UNRELEASED; urgency=low
 
   [ Tobias Grimm ]
   * Removed Conflicts line from plugin template
+  * Added Lintian ovveride to vdr-dev regarding reports about 
+    /usr/share/vdr-dev/plugin-template/rules not beeing a valid shell script
+  * Added linitan source overrided for "debian-rules-not-a-makefile"
+  * Removed lintian override for menu-command-not-in-package /usr/lib/menu/vdr:2
 
   [ Thomas Günther ]
   * Replaced VDRdevel adaptions in debian/rules and plugin-template/rules
@@ -14,7 +18,7 @@ vdr (1.4.5-1) UNRELEASED; urgency=low
   [ Thomas Schmidt ]
   * New upstream release
 
- -- Thomas Schmidt <tschmidt@debian.org>  Fri, 12 Jan 2007 15:03:54 +0100
+ -- Tobias Grimm <tg@e-tobi.net>  Fri, 12 Jan 2007 22:53:19 +0100
 
 vdr (1.4.4-1) unstable; urgency=low
 
