* Fixed shutdown script to not cause at to generate mails when a shutdown is   scheduled for later retry - fix provided by   Wolfgang Miller-Reichling &lt;wolfgang@miller-reichling.de&gt; SVN: trunk@3853

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,9 @@ vdr (1.4.5-1) UNRELEASED; urgency=low
   * Removed lintian override for menu-command-not-in-package /usr/lib/menu/vdr:2
   * Added the complete list of optional patches from the vdr package at e-tobi.net
     (Ubuntu might want to use them)
+  * Fixed shutdown script to not cause at to generate mails when a shutdown is
+    scheduled for later retry - fix provided by
+    Wolfgang Miller-Reichling <wolfgang@miller-reichling.de>
 
   [ Thomas Günther ]
   * Replaced VDRdevel adaptions in debian/rules and plugin-template/rules
