--- a/debian/changelog
+++ b/debian/changelog
@@ -9,8 +9,10 @@ vdr (1.4.5-2) UNRELEASED; urgency=low
     was the default behaviour when KEYB_TTY was specified. Now it's optional
     and disabled by default.
   * Added opt-50_graphtft.dpatch, required by the graphtft plugin version 0.0.15
+  * Replaced "==" in shell scripts with "=" for compatibility reasons
+    (reported by Jörg (Kano) Schirottke)
 
- -- Tobias Grimm <tg@e-tobi.net>  Sat, 20 Jan 2007 01:38:33 +0100
+ -- Tobias Grimm <tg@e-tobi.net>  Wed, 24 Jan 2007 18:55:42 +0100
 
 vdr (1.4.5-1) experimental; urgency=low
 
