Updated debianize-vdrplugin for Debian Etch
SVN: trunk@4151

--- a/debian/plugin-template/changelog
+++ b/debian/plugin-template/changelog
@@ -1,6 +1,12 @@
-vdr-plugin-#PACKAGE# (#VERSION#-1) unstable; urgency=low
+#PACKAGE# (#VERSION#-1) unstable; urgency=low
 
-  * Initial Release.
+  * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
+  
+  Important:
+  
+  If you intend to make this plugin available to others, please create an
+  ITP-bug (see http://www.debian.org/devel/wnpp ) and contact the
+  Debian VDR packaging team: pkg-vdr-dvb-devel@lists.alioth.debian.org
 
  -- #USERNAME# <#EMAIL#>  #DATE#
 
