--- a/debian/changelog
+++ b/debian/changelog
@@ -13,12 +13,13 @@ vdr (1.4.5-2) UNRELEASED; urgency=low
   * Added opt-50_graphtft.dpatch, required by the graphtft plugin version 0.0.15
   * Replaced "==" in shell scripts with "=" for compatibility reasons
     (reported by Jörg (Kano) Schirottke)
+  * Updated debianize-vdrplugin for Debian Etch
 
   [ Thomas Günther ]
   * Upgraded make-special-vdr.sh to version 0.3 (fixed detection of *.vdr files
     in burn plugin)
 
- -- Tobias Grimm <tg@e-tobi.net>  Wed, 24 Jan 2007 18:55:42 +0100
+ -- Tobias Grimm <tg@e-tobi.net>  Sat,  3 Feb 2007 02:32:43 +0100
 
 vdr (1.4.5-1) experimental; urgency=low
 
