--- a/debian/changelog
+++ b/debian/changelog
@@ -16,8 +16,8 @@ vdr (1.4.5-2) UNRELEASED; urgency=low
   * Updated debianize-vdrplugin for Debian Etch
 
   [ Thomas Günther ]
-  * Upgraded make-special-vdr.sh to version 0.3 (fixed detection of *.vdr files
-    in burn plugin)
+  * Upgraded make-special-vdr.sh to version 0.4 (fixed detection of *.vdr files
+    in burn plugin, updated for new vompserver release)
 
  -- Tobias Grimm <tg@e-tobi.net>  Sat,  3 Feb 2007 02:32:43 +0100
 
