--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ vdr (1.4.5-2) UNRELEASED; urgency=low
   [ Thomas Günther ]
   * Upgraded make-special-vdr.sh to version 0.4 (fixed detection of *.vdr files
     in burn plugin, updated for new vompserver release)
+  * Added 17_epg-conv-iso6937.dpatch (convert EPG of UPC Direct / HBO
+    from iso6937 to iso8859-2) (closes: #384836)
 
  -- Tobias Grimm <tg@e-tobi.net>  Sat,  3 Feb 2007 02:32:43 +0100
 
