--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,4 @@
-vdr (1.4.5-2) UNRELEASED; urgency=low
-
-  * NOT RELEASED YET
+vdr (1.4.6-1) experimental; urgency=low
 
   [ Tobias Grimm ]
   * Set NONPTL=0 by default - since version 1.3.27 VDR should work with the
@@ -22,7 +20,10 @@ vdr (1.4.5-2) UNRELEASED; urgency=low
   * Added 17_epg-conv-iso6937.dpatch (convert EPG of UPC Direct / HBO
     from iso6937 to iso8859-2) (closes: #384836)
 
- -- Tobias Grimm <tg@e-tobi.net>  Sat,  3 Feb 2007 02:32:43 +0100
+  [ Thomas Schmidt ]
+  * New upstream release
+
+ -- Thomas Schmidt <tschmidt@debian.org>  Sat, 10 Mar 2007 16:04:26 +0100
 
 vdr (1.4.5-1) experimental; urgency=low
 
