--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,9 @@
 vdr (1.4.6-2) UNRELEASED; urgency=low
 
   * NOR RELEASED YET
-  * Added opt-42-x_MainMenuHooks.dpatch (required by remoteosd plugin)
+  * Added opt-42-x_MainMenuHooks.dpatch
+  * Upgraded opt-48_pin.dpatch
+  * Updated opt-50_graphtft.dpatch
 
  -- Tobias Grimm <tg@e-tobi.net>  Sat, 10 Mar 2007 20:59:30 +0100
 
