--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ vdr (1.4.6-2) UNRELEASED; urgency=low
   * Upgraded opt-27_subtitles-ttxtsubs to Rolf Ahrenberg's
     vdr-1.4.5-subtitles-0.5.0-and-ttxtsubs-0.0.5.diff.gz (no functional changes,
     just new version numbers)
+  * Added Portuguese debconf translations (closes: #415495)
 
   [ Thomas Günther ]
   * Removed debug logs in 17_epg-conv-iso6937.dpatch
