--- a/debian/changelog
+++ b/debian/changelog
@@ -12,16 +12,17 @@ vdr (1.4.6-2) UNRELEASED; urgency=low
     vdr-1.4.5-subtitles-0.5.0-and-ttxtsubs-0.0.5.diff.gz (no functional changes,
     just new version numbers)
   * Added Portuguese debconf translations (closes: #415495)
+  * Added vdr maintenance patch 1.4.6-1 and modified 15_dvbplayer.dpatch
 
   [ Thomas Günther ]
   * Removed debug logs in 17_epg-conv-iso6937.dpatch
 
   [ Thomas Schmidt ]
   * Added vdr-groups.sh script which can be used by plugins which require the
-    user vdr to be a member in additional system groups, see README.Debian 
+    user vdr to be a member in additional system groups, see README.Debian
     for additional information
 
- -- Thomas Schmidt <tschmidt@debian.org>  Tue,  1 May 2007 13:50:39 +0200
+ -- Tobias Grimm <tg@e-tobi.net>  Tue,  1 May 2007 21:41:27 +0200
 
 vdr (1.4.6-1) experimental; urgency=low
 
