--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,9 @@ vdr (1.4.6-2) UNRELEASED; urgency=low
     just new version numbers)
   * Added Portuguese debconf translations (closes: #415495)
   * Added vdr maintenance patch 1.4.6-1 and modified 15_dvbplayer.dpatch
+  * vdr will no longer be added to the group cdrom by default. This has to be
+    done by the plugin, using the vdr-groups.sh script introduced in this
+    version
 
   [ Thomas Günther ]
   * Removed debug logs in 17_epg-conv-iso6937.dpatch
@@ -22,7 +25,7 @@ vdr (1.4.6-2) UNRELEASED; urgency=low
     user vdr to be a member in additional system groups, see README.Debian
     for additional information
 
- -- Tobias Grimm <tg@e-tobi.net>  Tue,  1 May 2007 21:41:27 +0200
+ -- Tobias Grimm <tg@e-tobi.net>  Fri,  4 May 2007 23:22:46 +0200
 
 vdr (1.4.6-1) experimental; urgency=low
 
