--- a/debian/svdrpsend.1
+++ b/debian/svdrpsend.1
@@ -4,7 +4,7 @@
 svdrpsend \- Sends commands to VDR
 .SH "DESCRIPTION"
 .LP 
-This progam sends commands to VDR and displays the result. A list of available commands can be shown by sending the HELP command.
+This program sends commands to VDR and displays the result. A list of available commands can be shown by sending the HELP command.
 .SH "SYNTAX"
 .LP 
 svdrpsend [\fIoptions\fP] \fIcommand\fP
@@ -26,7 +26,7 @@ svdrpsend HELP
 \fI/etc/vdr/svdrphosts.conf\fP 
 .SH "AUTHORS"
 .LP 
-This man-page has been written byTobias Grimm <tg@e\-tobi.net>
+This man-page has been written by Tobias Grimm <tg@e\-tobi.net>
 .PP
 Permission is granted to copy, distribute and/or modify this document under
 the terms of the GNU General Public License, Version 2 any
