--- a/debian/changelog
+++ b/debian/changelog
@@ -10,7 +10,11 @@ vdr (1.4.7-2) UNRELEASED; urgency=low
   * Upgraded make-special-vdr.sh to version 0.6 (xineliboutput,
     burnbackgrounds, debianize-vdrplugin, vompserver)
 
- -- Thomas Günther <tom@toms-cafe.de>  Wed, 27 Jun 2007 02:53:01 +0200
+  [ Tobias Grimm ]
+  * Changed copyright file in the new plug-in template to match
+    the new debian/copyright schema for VDR packages
+
+ -- Tobias Grimm <tg@e-tobi.net>  Fri, 07 Sep 2007 09:53:59 +0200
 
  vdr (1.4.7-1) unstable; urgency=low
 
