--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+vdr (1.4.7-4) unstable; urgency=low
+
+  * Using empty directory /usr/lib/vdr/plugins again and adding lintian
+    override for "package-contains-empty-directory" warning - VDR
+    requires the plugin directory!
+
+ -- Tobias Grimm <tg@e-tobi.net>  Mon, 14 Jan 2008 21:45:01 +0100
+
 vdr (1.4.7-3) unstable; urgency=low
 
   [ Tobias Grimm ]
