* NOT RELEASED YET * Added short description to the NAME section of the manpages to fix the   Lintian manpage-has-bad-whatis-entry warning SVN: trunk@6160

--- a/debian/debianize-vdrplugin.1
+++ b/debian/debianize-vdrplugin.1
@@ -2,7 +2,7 @@
 
 .TH debianize-vdrplugin 1
 .SH NAME
-debianize-vdrplugin
+debianize-vdrplugin \- debianize a VDR plug-in source archive
 .SH DESCRIPTION
 .B debianize-vdrplugin
 can be used to add a working debian-directory to the source-directory 
