--- a/debian/runvdr.8
+++ b/debian/runvdr.8
@@ -2,7 +2,7 @@
 
 .TH runvdr 8
 .SH NAME
-runvdr
+runvdr \- starts VDR and reloads the DVB modules in case of errors
 .SH DESCRIPTION
 .B runvdr
 is called by the init-script of vdr. It acts as a watchdog for vdr and will 
