--- a/debian/vdr-newplugin.1
+++ b/debian/vdr-newplugin.1
@@ -2,8 +2,7 @@
 
 .TH vdr-newplugin 1
 .SH NAME
-vdr-newplugin
-
+vdr-newplugin \- create a new VDR plug-in source tree
 .SH SYNOPSIS
 
 .B vdr-newplugin
