--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
-vdr (1.4.7-4) unstable; urgency=low
+vdr (1.4.7-4) UNRELEASED; urgency=low
 
+  * NOT RELEASED YET
   * Using empty directory /usr/lib/vdr/plugins again and adding lintian
     override for "package-contains-empty-directory" warning - VDR
     requires the plugin directory!
+  * Added short description to the NAME section of the manpages to fix the
+    Lintian manpage-has-bad-whatis-entry warning
 
- -- Tobias Grimm <tg@e-tobi.net>  Mon, 14 Jan 2008 21:45:01 +0100
+ -- Tobias Grimm <tg@e-tobi.net>  Fri, 18 Jan 2008 18:55:37 +0100
 
 vdr (1.4.7-3) unstable; urgency=low
 
