--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,5 @@
-vdr (1.5.16-1) UNRELEASED; urgency=low
-  
+vdr (1.5.17-1) UNRELEASED; urgency=low
+
   [ Tobias Grimm]
   * New upstream release
   * Updated 03_cmdsubmenu.dpatch
@@ -58,8 +58,8 @@ vdr (1.5.16-1) UNRELEASED; urgency=low
   * Added opt-29_syncearly.dpatch and opt-29_syncearly-audioindexer.dpatch
   * Added opt-48_pin-submenu.dpatch
   * Added opt-50_graphtft-0.1.dpatch
-  * Replaced opt-27_subtitles-ttxtsubs.dpatch with opt-27_ttxtsubs.dpatch
-    (subtitles support now integrated in upstream)
+  * Replaced opt-27_subtitles-ttxtsubs.dpatch with opt-27_ttxtsubs.dpatch -
+    subtitles support now integrated in upstream (closes: #352442)
   * Added gettext to Build-Depends
   * Added libfreetype6-dev and libfontconfig-dev to Build-Depends
   * Replaced libncurses5-dev with libncursesw5-dev in Build-Depends
