--- a/debian/changelog
+++ b/debian/changelog
@@ -82,8 +82,9 @@ vdr (1.6.0-1) UNRELEASED; urgency=low
     vdrdbg-buildpackage from Tobias repository
   * Updated debian/copyright
   * Changed config-loader.sh to get default $LANG from /etc/environment
+  * Updated years in debian/copyright
 
- -- Thomas Schmidt <tschmidt@debian.org>  Sun, 23 Mar 2008 12:27:48 +0100
+ -- Thomas Schmidt <tschmidt@debian.org>  Sun, 23 Mar 2008 18:28:22 +0100
 
 vdr (1.4.7-3) unstable; urgency=low
 
