--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+vdr (1.6.0-2) UNRELEASED; urgency=low
+
+  * Upgraded make-special-vdr.sh to version 0.8
+
+ -- Thomas Günther <tom@toms-cafe.de>  Mon, 24 Mar 2008 23:43:38 +0100
+
 vdr (1.6.0-1) experimental; urgency=low
 
   [ Tobias Grimm]
