--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
 vdr (1.6.0-2) UNRELEASED; urgency=low
 
   * Upgraded make-special-vdr.sh to version 0.8
+  * Upgraded opt-41-x_timer-info.dpatch to version 0.5
 
- -- Thomas Günther <tom@toms-cafe.de>  Mon, 24 Mar 2008 23:43:38 +0100
+ -- Thomas Günther <tom@toms-cafe.de>  Sat, 12 Apr 2008 20:50:23 +0200
 
 vdr (1.6.0-1) experimental; urgency=low
 
