--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,14 @@
 vdr (1.6.0-2) UNRELEASED; urgency=low
 
+  [ Tobias Grimm ]
+  * Removed makedev dependency (not needed anymore since 1.4.7-2)
+  * Added dependency to at (required by shutdown scripts)
+
+  [ Thomas Günther ]
   * Upgraded make-special-vdr.sh to version 0.8
   * Upgraded opt-41-x_timer-info.dpatch to version 0.5
 
- -- Thomas Günther <tom@toms-cafe.de>  Sat, 12 Apr 2008 20:50:23 +0200
+ -- Tobias Grimm <tg@e-tobi.net>  Sat, 12 Apr 2008 23:24:29 +0200
 
 vdr (1.6.0-1) experimental; urgency=low
 
