Applied a lot of spelling fixes (Thanks to Michael Nork!)
SVN: trunk@6795

--- a/debian/vdr-newplugin.1
+++ b/debian/vdr-newplugin.1
@@ -2,7 +2,7 @@
 
 .TH vdr-newplugin 1
 .SH NAME
-vdr-newplugin \- create a new VDR plug-in source tree
+vdr-newplugin \- create a new VDR plugin source tree
 .SH SYNOPSIS
 
 .B vdr-newplugin
