--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ vdr (1.6.0-2) UNRELEASED; urgency=low
     as "CXXFLAGS ?=...", these settings are ignored when an environment variable
     CXXFLAGS exists. On non-i386 builds this causes a FTBFS for all plugins,
     because of the missing -fPIC. Plugins, that require special compiler
-    arguments, should from now on pass CXXFLAGS as an arguemtn to the make call
+    arguments, should from now on pass CXXFLAGS as an argument to the make call
     in debian/rules. (closes: #475710)
   * Made Make.config handle DEB_BUILD_OPTIONS=noopt, so all plugins including
     Make.config in their Makefile will inherently suppport noopt as well 
@@ -23,8 +23,9 @@ vdr (1.6.0-2) UNRELEASED; urgency=low
   * Updated opt-48-x_pin.dpatch
   * Upgraded opt-37-x_menuorg.dpatch to version 0.4.2
   * Upgraded opt-50_graphtft-0.1.dpatch to current version 0.1.7~alpha of the
-    GraphTFT plug-in (taken from the Zulu Extensions Patch 56) and renamed it
+    GraphTFT plugin (taken from the Zulu Extensions Patch 56) and renamed it
     to opt-50_graphtft.dpatch (deleted old opt-50_graphtft.dpatch)
+  * Applied a lot of spelling fixes (Thanks to Michael Nork!)
 
   [ Thomas Günther ]
   * Upgraded make-special-vdr.sh to version 0.9
@@ -1096,7 +1097,7 @@ vdr (0.98-1) unstable; urgency=low
 vdr (0.96-4) unstable; urgency=low
 
   * improved Description, thanks to Joey and Alfie
-  * included README and other scripts, maybe usefull
+  * included README and other scripts, maybe useful
 
  -- Eduard Bloch <blade@debian.org>  Thu, 11 Oct 2001 12:56:42 +0200
 
@@ -1104,7 +1105,7 @@ vdr (0.96-3) unstable; urgency=high
 
   * all versions except of -daemon disable the control port by default
     (possible security hole). Debconf warning for -daemon.
-  * package splited
+  * package splitted
   * building additional vdr-daemon binary, needed for kvdr
   * fixed postinst files, there were too much copy&paste work :(
 
