--- a/debian/debianize-vdrplugin.1
+++ b/debian/debianize-vdrplugin.1
@@ -2,7 +2,7 @@
 
 .TH debianize-vdrplugin 1
 .SH NAME
-debianize-vdrplugin \- debianize a VDR plug-in source archive
+debianize-vdrplugin \- debianize a VDR plugin source archive
 .SH DESCRIPTION
 .B debianize-vdrplugin
 can be used to add a working debian-directory to the source-directory 
