--- a/debian/runvdr.8
+++ b/debian/runvdr.8
@@ -9,7 +9,7 @@ is called by the init-script of vdr. It acts as a watchdog for vdr and will
 reload the dvb-modules and vdr, if vdr exits with an exitcode different from 0.
 
 .B runvdr
-will call /usr/bin/vdr and will pass all Commandline-options directly to 
+will call /usr/bin/vdr and will pass all commandline-options directly to 
 /usr/bin/vdr.
 
 .B runvdr
